# algorithmics

./: .gitignore  README.md  larves.py  template.rs
advent-of-code/2019/src/: computer.rs  day1.rs  day4.rs  day9.rs  main.rs
advent-of-code/2020/: Cargo.toml  perf.data.old
advent-of-code/2020/src/: day01.rs  day07.rs  day08.rs  day09.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  main.rs  utils.rs
advent-of-code/2022/: Cargo.toml
advent-of-code/2022/output/2022/: day11-2.txt  day15-1.txt  day15-2.txt  day17-2.txt  day20-2.txt
advent-of-code/2022/src/: day01.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day20.rs  main.rs
advent-of-code/2022/src/util/: matrix.rs  mod.rs
advent_of_code/2019/: Cargo.toml
advent_of_code/2019/src/: computer.rs  day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
advent_of_code/2020/: Cargo.toml
advent_of_code/2020/src/: day01.rs  day1.rs  (+25 more)
advent_of_code/2022/: Cargo.toml
beatthehash/: Cargo.toml
beatthehash/src/: main.rs
beatthehash/state/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  best.txt
freestyle/: larves.py
project-euler/: Cargo.toml
project-euler/src/: main.rs  problem_001.rs  problem_002.rs  problem_003.rs  problem_004.rs  problem_005.rs  problem_006.rs  problem_007.rs  problem_008.rs  problem_009.rs  problem_010.rs  problem_011.rs  problem_012.rs  problem_013.rs  problem_014.rs  problem_015.rs  problem_017.rs  problem_018.rs  problem_020.rs  problem_021.rs  problem_022.rs  problem_023.rs  problem_024.rs  problem_025.rs  problem_027.rs  problem_029.rs  problem_030.rs  problem_031.rs  problem_034.rs  problem_035.rs  problem_036.rs  problem_039.rs  problem_040.rs  problem_041.rs  problem_067.rs  problem_101.rs  problem_102.rs  problem_104.rs  problem_108.rs  problem_201.rs  (+1 more)
project-euler/src/util/: algorithms.rs  arithmetic.rs  linalg.rs  mod.rs  primes.rs  sequences.rs
protohackers/: Cargo.toml
protohackers/src/: lib.rs
protohackers/src/speed_daemon/: client.rs  error.rs  heartbeat.rs  message.rs  mod.rs  state.rs  util.rs
(+56 files in other folders)
