[package]
name = "project-euler"
version = "0.1.0"
authors = ["Rémi Dupré <r.dupre@qwant.com>"]
edition = "2018"

[dependencies]
cached = { version = "0.23.0", default_features = false, features = [ "proc_macro" ] }
colored = "2.0.0"
fxhash = "0.2.1"
num-bigint = "0.4.0"
num-integer = "0.1.44"
num-rational = "0.4.0"
num-traits = "0.2.14"
rayon = "1.5.1"
