[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rayon = "1"
rustc-hash = "1"

aoc-main = { path = "/home/remi/code/perso/aoc", features = ["bench"] }
# aoc-main = { git = "https://github.com/remi-dupre/aoc.git", branch = "less-macros", features = ["bench"] }
